--- a/Scratch/Scratch.csproj
+++ b/Scratch/Scratch.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{828C9E31-9098-4D6B-B785-C7051426ACA7}</ProjectGuid>
+    <ProjectGuid>{A10F86DB-62C5-4CCB-8BAC-426AAE349DB0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BitCoinScraper</RootNamespace>
-    <AssemblyName>BitCoinScraper</AssemblyName>
+    <RootNamespace>Scratch</RootNamespace>
+    <AssemblyName>Scratch</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,9 +55,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="HTMLPage1.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
