--- a/TitlesOnly/TitlesOnly.csproj
+++ b/TitlesOnly/TitlesOnly.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{828C9E31-9098-4D6B-B785-C7051426ACA7}</ProjectGuid>
+    <ProjectGuid>{657E0886-1B25-45E3-B515-BB90B0F510F8}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BitCoinScraper</RootNamespace>
-    <AssemblyName>BitCoinScraper</AssemblyName>
+    <RootNamespace>TitlesOnly</RootNamespace>
+    <AssemblyName>TitlesOnly</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,16 +48,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebClientExtended.cs">
-      <SubType>Component</SubType>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="HTMLPage1.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
